# aoc_2024

./: .gitignore  README.md  flake.nix  justfile  pyproject.toml
.github/workflows/: update-star-count.yml
day00/: __main__.py
day01/: __main__.py
day02/: __main__.py
day03/: __main__.py
day04/: __main__.py
day05/: __main__.py
day06/: __main__.py
day07/: __main__.py
day08/: __main__.py
day09/: __main__.py
day10/: __main__.py
day11/: __main__.py
day12/: __main__.py
day13/: __main__.py
day14/: __main__.py
day15/: __main__.py  test-input2.txt
