[tool.poetry]
name = "AoC2024"
version = "0.1.0"
description = "My solutions for Advent of Code 2024"
authors = ["Lasse Haffke <github@haffke.me>"]
readme = "README.md"
# license = "BSD"
packages = [
  { include = "day*" }
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
